Feature: Added Entity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,15 +19,14 @@ include_directories(
 	${CMAKE_SOURCE_DIR}/src/Brain/api/
 	${CMAKE_SOURCE_DIR}/src/Common/inc/
 	${CMAKE_SOURCE_DIR}/src/Common/api/
-	${CMAKE_SOURCE_DIR}/src/Organism/inc/
-	${CMAKE_SOURCE_DIR}/src/Organism/api/	
-	${CMAKE_SOURCE_DIR}/src/PointOfInterest/inc/
-	${CMAKE_SOURCE_DIR}/src/PointOfInterest/api/
+	${CMAKE_SOURCE_DIR}/src/Entity/inc/
+	${CMAKE_SOURCE_DIR}/src/Entity/api/	
 )
 
 file(GLOB_RECURSE ${PROJECT_NAME}_SOURCE_FILES
 	main.cpp src/*.cpp
 )	
+
 
 add_executable(${TARGET} ${${PROJECT_NAME}_SOURCE_FILES})
 target_link_libraries(${TARGET} ${LIBS})
